-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13, 17, 18
-
Component/s: hotspot
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8274488 | 17.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8274519 | 11.0.14-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8274713 | 11.0.14 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
1) org.graalvm.compiler.core.test.UnsafeVirtualizationTest#testUnsafePEA01
java.lang.AssertionError: java.lang.AssertionError: expected:<0> but was:<1072693248>
at org.graalvm.compiler.core.test.UnsafeVirtualizationTest.testPartialEscapeReadElimination(UnsafeVirtualizationTest.java:161)
at org.graalvm.compiler.core.test.UnsafeVirtualizationTest.testUnsafePEA01(UnsafeVirtualizationTest.java:116)
- backported by
-
JDK-8274488 C2: Missing interference with mismatched unsafe accesses
-
- Resolved
-
-
JDK-8274519 C2: Missing interference with mismatched unsafe accesses
-
- Resolved
-
-
JDK-8274713 C2: Missing interference with mismatched unsafe accesses
-
- Resolved
-
- relates to
-
JDK-8222552 [Graal] org.graalvm.compiler.jtt.jdk.UnsafeAllocateInstance01 fails with "AssertionError: expected null but got an exception"
-
- Closed
-
-
JDK-8253964 [Graal] UnschedulableGraphTest#test01fails with expected:<4> but was:<3>
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/89ee6116
-
Commit
openjdk/jdk17u/7298db5b
-
Commit
openjdk/jdk/86add21a
-
Review
openjdk/jdk11u-dev/276
-
Review
openjdk/jdk17u/104
-
Review
openjdk/jdk/5146