8223923: C2: Missing interference with mismatched unsafe accesses

Backport-of: 86add21a85ec57de00aecb0a18bc99567a91d0d8